[FE-10728] TextField tweak - prevent text overflowing container

--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -2,6 +2,7 @@
 
 .mdc-text-field.mdc-text-field--upgraded {
   font-family: "Roboto", sans-serif;
+  border-radius: 4px;
 
   &:not(.mdc-text-field--textarea) {
     height: 36px;
@@ -39,10 +40,12 @@
 
   &.mdc-text-field--with-leading-icon .mdc-floating-label {
     left: 24px;
+    padding-right: 24px;
   }
 
   &.mdc-text-field--with-leading-icon .mdc-floating-label.mdc-floating-label--float-above {
-    transform: translateY(-75%) translateX(-20px) scale(0.75)
+    transform: translateY(-75%) translateX(-20px) scale(0.75);
+    padding-right: 0;
   }
 
   &.mdc-text-field--with-leading-icon .mdc-text-field__icon,
